--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "tsparticles-slim": "^2.12.0",
     "typeface-inter": "^3.18.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
